# stammdaten

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install_app.sh  profile.json
.github/workflows/: rust.yml
src/: main.rs  profile.rs  state.rs  tax_id.rs
src/data/: id_card.rs  key_value_item.rs  mod.rs  post_number.rs  profile.rs  social_security_number.rs  tax_id.rs
src/ui/: create.rs  create_bank_account.rs  create_id_card.rs  create_key_value_item.rs  create_post_number.rs  create_profile.rs  create_social_security_number.rs  create_tax_id.rs  main.rs  mod.rs  some_lens.rs
src/widgets/: card.rs  form.rs  input.rs  mod.rs  nav_controller.rs  outline_button.rs
