[package]
name = "stammdaten"
version = "0.1.0"
edition = "2021"
description = "manage basic administration data"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
directories = "4.0.1"
druid = { git = "https://github.com/linebender/druid.git", features = ["svg", "im"] }
druid-enums = { git = "https://github.com/finnerale/druid-enums" }
log = "0.4.11"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
tempfile = "3"
webbrowser = "0.5.5"

[package.metadata.bundle]
name = "Stammdaten"
identifier = "de.flxbe.stammdaten"
short_description = "Stammdaten"

